src/routes/app.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	--bg-color: #fff;
	--secondary-bg-color: #eee;
	--text-color: #111;
	--secondary-text-color: #666;
	--outline-color: #666;
	--secondary-outline-color: #aaa;
	--accent-color: #3388ad;
	--heading-color: #3f76b6;
	--button-color: #728aa7;
	--success-color: #079307;
	--error-color: #ff0000;
	--shadow-color: #0004;
}

body[data-theme='dark'] {
	--bg-color: #121216;
	--secondary-bg-color: #262626;
	--text-color: #fff;
	--secondary-text-color: #999;
	--outline-color: #aaa;
	--secondary-outline-color: #444;
	--accent-color: #f0dd4a;
	--heading-color: #87ceeb;
	--button-color: #375886;
	--success-color: #31cd31;
	--error-color: #ed3e2b;
	--shadow-color: #000a;
}

body {
	margin: 0;
	padding-inline: 0.75rem;
	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
		'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
	font-size: 1.125rem;
	background-color: var(--bg-color);
	color: var(--text-color);
	line-height: 1.5;
}

@media (prefers-reduced-motion: no-preference) {
	body,
	html {
		scroll-behavior: smooth;
	}
}

p {
	margin-block: 1rem;
}

a {
	color: inherit;
	text-underline-offset: 2px;
	text-decoration-thickness: 1px;
	text-decoration-color: var(--outline-color);
}

a:active {
	color: var(--accent-color);
}

a:focus-visible,
mjx-container:focus-visible {
	outline: 1px solid var(--text-color);
	outline-offset: 2px;
}

h1,
h2,
h3 {
	line-height: 1.2;
	font-weight: 500;
	color: var(--heading-color);
	font-family: 'Courier New', Courier, monospace;
}

h1 {
	font-size: 2.25rem;
}

h2 {
	font-size: 1.875rem;
	margin-block: 0.5rem 1rem;
}

h3 {
	font-size: 1.45rem;
	margin-block: 2rem 1rem;
}

.hint {
	color: var(--secondary-text-color);
	font-size: 1rem;
}

ul {
	padding-left: 1.5rem;
}

button,
input {
	font: inherit;
	background: none;
	border: none;
	color: inherit;
}

input {
	padding: 0.4rem 0.8rem;
	border-radius: 0.25rem;
}

input[type='text'] {
	outline: none;
	border: 1px solid var(--outline-color);
}

input[type='text']:focus-visible {
	border-color: var(--text-color);
	background-color: var(--secondary-bg-color);
}

input[type='text'][aria-invalid='true'] {
	border-color: var(-error-color);
}

button {
	cursor: pointer;
}

button:disabled {
	opacity: 0.75;
	cursor: not-allowed;
}

button:focus-visible {
	outline: 1px solid var(--text-color);
	outline-offset: 2px;
}

.button {
	font-size: 1rem;
	border-radius: 0.25rem;
	padding: 0.2rem 0.8rem;
	color: white;
	background-color: var(--button-color);
}

.visually-hidden {
	position: absolute;
	clip: rect(1px, 1px, 1px, 1px);
	padding: 0;
	border: 0;
	height: 1px;
	width: 1px;
	overflow: hidden;
	white-space: nowrap;
}

.dashed-list {
	list-style-type: '- ';
}

